after second review

--- a/templates/forbidden.html
+++ b/templates/forbidden.html
@@ -9,7 +9,10 @@
 {% load user_filters %}
 <main class="main container">
     <div class="main__header">
-        <h1 class="main__title">Вы не можете выполнить данное действие! Вы не являетесь автором рецепта</h1>
+        <h1 class="main__title">
+            <p>Вы не можете выполнить данное действие!</p>
+            <p>Вы не являетесь автором рецепта</p>
+        </h1>
     </div>
 </main>
     {% block scripts %}
