--- a/templates/includes/paginator.html
+++ b/templates/includes/paginator.html
@@ -1,8 +1,9 @@
+{% load user_filters %}
 <nav class="pagination" aria-label="Search results pages">
     <ul class="pagination__container">
         {% if page.has_previous %}
             <li class="pagination__item">
-                <a class="pagination__link link" href="?page={{ page.previous_page_number }}">
+                <a class="pagination__link link" href="?{{ request|url_with_get:page.previous_page_number }}">
                     <span class="icon-left"></span>
                 </a>
             </li>
@@ -10,13 +11,13 @@
 
         {% for page_number in paginator.page_range %}
             <li class="pagination__item  {% if page.number == page_number %}pagination__item_active{% endif %}">
-                <a class="pagination__link link" href="?page={{ page_number }}">{{ page_number }}</a>
+                <a class="pagination__link link" href="?{{ request|url_with_get:page_number }}">{{ page_number }}</a>
             </li>
         {% endfor %}
 
         {% if page.has_next %}
             <li class="pagination__item">
-                <a class="pagination__link link" href="?page={{ page.next_page_number }}">
+                <a class="pagination__link link" href="?{{ request|url_with_get:page.next_page_number }}">
                     <span class="icon-right"></span>
                 </a>
             </li>
