--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -28,7 +28,7 @@
                 <div class="form__field-group">
                     {{ form.new_password1|add_classes:'form__input' }}
                     {% if form.new_password1.help_text %}
-                        <span class="form__input-info">{{ form.new_password1.help_text|remove_tag|linebreaksbr  }}</span>
+                        <span class="form__input-info">{{ form.new_password1.help_text|remove_li|linebreaksbr  }}</span>
                     {% endif %}
                     {% for error in form.new_password1.errors %}
                         <span class="form__error">{{ error }}</span>
