--- a/recipes/static/blocks/form/__group/form__group.css
+++ b/recipes/static/blocks/form/__group/form__group.css
@@ -3,3 +3,13 @@
     width: 100%;
     margin-bottom: 25px;
 }
+.preview > div {
+  display: inline-block;
+  text-align:center;
+}
+
+.preview2 > div {
+  display: inline-block;
+  text-align:center;
+  border-radius: 8px;
+}
