--- a/recipes/static/blocks/form/form.css
+++ b/recipes/static/blocks/form/form.css
@@ -10,3 +10,11 @@
     max-width: 770px;
     width: 100%;
 }
+div.polaroid {
+  border: 0px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 155px;
+}
+
+img {width: 100%}
