--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -53,15 +53,17 @@
                             <input type="text" id="nameIngredient" class="form__input">
                             <div class="form__dropdown-items"></div>
                         </div>
-                        <input type="number" id="cantidad" class="form__input" min="0">
+                        <input type="number" id="cantidad" class="form__input" min="1">
                         <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
                     </div>
-
+                    {% for error in form.ingredient.errors %}
+                        <span class="form__error">{{ error }}</span>
+                    {% endfor %}
                     <div class="form__field-group-ingredientes-container">
                         {% for ingredient in recipe.ingredients.all %}
                             <div class="form__field-item-ingredient"
                                  id="{{ ingredient.id }}">
-                                <span> {{ ingredient }} - {{ingredient.count }}{{ ingredient.ingredients.dimension }}</span>
+                                <span> {{ ingredient }} - {{ingredient.count }} ({{ ingredient.ingredients.dimension }})</span>
                                 <span class="form__field-item-delete"></span>
                                     <input id="nameIngredient_{{ ingredient.id  }}" name="nameIngredient"
                                            type="hidden"
@@ -76,19 +78,24 @@
                         {% endfor %}
                     </div>
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-                    <span class="form__error"></span>
+
                 </div>
             </div>
 
             <div class="form__group">
                 <label for="id_time" class="form__label">Время приготовления</label>
                 <div class="form__field-group form__field-group_time">
-                    <input type="text" id="id_duration" name="duration" class="form__input" value="{{ recipe.duration }}">
+                    {{ form.duration|add_classes:'form__input' }}
                     <label for="id_time" class="form__label">минут</label>
-                    <span class="form__error"></span>
+                    {% if error %}
+                        {% for error in form.duration.errors %}
+                            <span class="form__error">{{ error }}</span>
+                        {% endfor %}
+                    {% endif %}
                 </div>
             </div>
-           <div class="form__group">
+
+            <div class="form__group">
                 <label for="id_description" class="form__label">Описание</label>
                 <div class="form__field-group">
                     {{ form.description|add_classes:'form__textarea' }}
@@ -101,8 +108,17 @@
                 <span class="form__label">Загрузить фото</span>
                 <div class="form__field-group">
                     <label for="id_file" class="form__file-button">Выбрать файл</label>
-                    <input type="file" class="form__file" name="image" id="id_file" >
-                    <span class="form__error"></span>
+                    <input type="file" class="form__file" accept="image/*" name="image" id="id_file" onchange="loadFile(event)">
+                    <span class="form__error">{{ form.image.errors|striptags }}</span>
+                </div>
+            </div>
+
+            <div class="form__group">
+                <span class="form__label"></span>
+                <div class="form__field-group">
+                    <div class="polaroid">
+                        <img id="new_img" />
+                    </div>
                 </div>
             </div>
 
@@ -113,12 +129,11 @@
                         <img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" style="width:100px;">
                     </div>
                 </div>
-            {% endif %}
+             {% endif %}
             <div class="form__footer">
                 <button class="button button_style_blue">Сохранить</button> &nbsp;&nbsp;&nbsp;
                 <button type="button" class="button button_style_red">
-                    <a  href="{% url 'delete_recipe' recipe.id %}">Удалить</a>
-
+                    <a  href="{% url 'delete_recipe' form.instance.id %}">Удалить</a>
                 </button>
             </div>
         </form>
@@ -131,5 +146,6 @@
         <script src="{% static 'js/utils/debouncing.js' %}"></script>
         <script src="{% static 'js/api/Api.js' %}"></script>
         <script src="{% static 'formRecipe.js' %}"></script>
+        <script src="{% static 'preview.image.min.js' %}"></script>
     {% endblock %}
 {% endblock %}
