--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -50,7 +50,7 @@
                 <div class="form__field-group">
                     <div class="form__field-group-ingredientes">
                         <div class="form__dropdown">
-                            <input type="text" id="nameIngredient" class="form__input">
+                            <input type="text" id="nameIngredient" class="form__input" autocomplete="off">
                             <div class="form__dropdown-items"></div>
                         </div>
                         <input type="number" id="cantidad" class="form__input" min="1">
