after second review

--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -20,7 +20,7 @@
                 <label for="id_email" class="form__label">Адрес электронной почты</label>
                 <div class="form__field-group">
                     {{ form.email|add_classes:'form__input' }}
-                    {% if form.errors %}<div class="form__error" role="alert">{{ form.label }}{{ form.errors|remove_email }}</div>{% endif %}
+                    {% if form.errors %}<div class="form__error" role="alert">{{ form.label }}{{ form.errors }}</div>{% endif %}
                 </div>
             </div>
            <div class="form__footer">
