after third review

--- a/templates/myFollow.html
+++ b/templates/myFollow.html
@@ -50,7 +50,9 @@
             {% endfor %}
         </div>
     </body>
-    {% include 'includes/paginator.html' %}
+    {% if page.paginator.count  > 6 %}
+        {% include "includes/paginator.html"%}
+    {% endif %}
 </main>
 
 <script src="{% static 'js/config/config.js'%}"></script>
