--- a/recipes/static/blocks/main/__title/main__title.css
+++ b/recipes/static/blocks/main/__title/main__title.css
@@ -8,3 +8,9 @@
     padding: 0;
     margin: 0;
 }
+
+.custom-info {
+    font-family: 'Montserrat', sans-serif;
+    text-align: left;
+    font-size: 20px;
+  }
