--- a/templates/authorRecipe.html
+++ b/templates/authorRecipe.html
@@ -28,7 +28,9 @@
             {% include "includes/recipe_card.html" %}
         {% endfor %}
     </div>
-    {% include "includes/paginator.html"%}
+    {% if page.paginator.count  > 6 %}
+        {% include "includes/paginator.html"%}
+    {% endif %}
     </main>
 </body>
 
