--- a/templates/favorite.html
+++ b/templates/favorite.html
@@ -15,8 +15,9 @@
                 {% include 'includes/recipe_card.html' %}
             {% endfor %}
         </div>
-
-        {% include 'includes/paginator.html' %}
+        {% if page.paginator.count  > 6 %}
+            {% include "includes/paginator.html"%}
+        {% endif %}
 
     </main>
 
