--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,9 @@
             {% endfor %}
         </div>
 
-        {% include 'includes/paginator.html' %}
+        {% if page.paginator.count  > 6 %}
+            {% include "includes/paginator.html"%}
+        {% endif %}
     </main>
 </body>
     {% block scripts %}
